src/test/06-Errors/error-super-no-func-object.txt
error-super-no-func-object.ck:9:15: error: class 'Object' has no member 'test'
[9]         super.test();
                  ^
error-super-no-func-object.ck: ...in function 'void Child.test()'
